bk_ida/gccida/c1/alter_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alter_reg/src/reload1.c:2449:29: error: use of undeclared identifier 'machine_mode'
v13 = assign_stack_local( ( machine_mode)v9, v12, -( v10 < v11)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alter_reg/src/reload1.c:2460:29: error: use of undeclared identifier 'machine_mode'
v13 = assign_stack_local( ( machine_mode)v9, v12, -( v12 != v10)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alter_reg/src/reload1.c:2464:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64 *)v14[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alter_reg/src/reload1.c:2489:32: error: use of undeclared identifier 'machine_mode'
v18 = adjust_address_1( v13, ( machine_mode)*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[v3] + 2), 0LL, 0, 1); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/alter_reg/src/obj/reload1.o] Error 1
